--- a/css/main.css
+++ b/css/main.css
@@ -301,7 +301,7 @@ main hr {
     cursor: default;
 }
 
-.pcss3t>ul {
+.pcss3t>.tab_list {
     list-style: none;
     position: relative;
     overflow: hidden;
@@ -312,7 +312,7 @@ main hr {
     font-size: 13px;
 }
 
-.pcss3t>ul>li {
+.pcss3t>.tab_list>.typography {
     position: absolute;
 
     box-sizing: border-box;
@@ -325,16 +325,16 @@ main hr {
     -webkit-transition: all 0.5s;
 }
 
-.pcss3t>.tab-content-first:checked~ul .tab-content-first,
-.pcss3t>.tab-content-2:checked~ul .tab-content-2,
-.pcss3t>.tab-content-3:checked~ul .tab-content-3,
-.pcss3t>.tab-content-4:checked~ul .tab-content-4,
-.pcss3t>.tab-content-5:checked~ul .tab-content-5,
-.pcss3t>.tab-content-6:checked~ul .tab-content-6,
-.pcss3t>.tab-content-7:checked~ul .tab-content-7,
-.pcss3t>.tab-content-8:checked~ul .tab-content-8,
-.pcss3t>.tab-content-9:checked~ul .tab-content-9,
-.pcss3t>.tab-content-last:checked~ul .tab-content-last {
+.pcss3t>.tab-content-first:checked~.tab_list .tab-content-first,
+.pcss3t>.tab-content-2:checked~.tab_list .tab-content-2,
+.pcss3t>.tab-content-3:checked~.tab_list .tab-content-3,
+.pcss3t>.tab-content-4:checked~.tab_list .tab-content-4,
+.pcss3t>.tab-content-5:checked~.tab_list .tab-content-5,
+.pcss3t>.tab-content-6:checked~.tab_list .tab-content-6,
+.pcss3t>.tab-content-7:checked~.tab_list .tab-content-7,
+.pcss3t>.tab-content-8:checked~.tab_list .tab-content-8,
+.pcss3t>.tab-content-9:checked~.tab_list .tab-content-9,
+.pcss3t>.tab-content-last:checked~.tab_list .tab-content-last {
     z-index: 1;
     top: 0;
     left: 0;
@@ -375,7 +375,7 @@ main hr {
 /**/
 /* animation effects */
 /**/
-.pcss3t-effect-scale>ul>li {
+.pcss3t-effect-scale>.tab_list>.typography {
     -webkit-transform: scale(0.1, 0.1);
 }
 
@@ -435,7 +435,7 @@ main hr {
     background: #fff;
 }
 
-.pcss3t>ul {
+.pcss3t>.tab_list {
     background: #fff;
     text-align: left;
 }
@@ -470,12 +470,12 @@ main hr {
     opacity: 1;
 }
 
-.pcss3t-theme-1>ul {
+.pcss3t-theme-1>.tab_list {
     border-radius: 0px;
     box-shadow: 0 2px rgba(0, 0, 0, 0.2);
 }
 
-.pcss3t-theme-1>.tab-content-first:checked~ul {
+.pcss3t-theme-1>.tab-content-first:checked~.tab_list {
     border-top-left-radius: 0;
 }
 
@@ -490,7 +490,7 @@ main hr {
         border-radius: 5px;
     }
 
-    .pcss3t-theme-1>.tab-content-first:checked~ul {
+    .pcss3t-theme-1>.tab-content-first:checked~.tab_list {
         border-top-left-radius: 5px;
     }
 
@@ -537,7 +537,7 @@ main hr {
     opacity: 1;
 }
 
-.pcss3t-theme-3>ul {
+.pcss3t-theme-3>.tab_list {
     border-top: 4px solid #d9d92b;
     border-bottom: 4px solid #d9d92b;
     border-radius: 0;
@@ -551,8 +551,8 @@ main hr {
 /**/
 /* height */
 /**/
-.pcss3t>ul,
-.pcss3t>ul>li {
+.pcss3t>.tab_list,
+.pcss3t>.tab_list>.typography {
     height: 600px;
 }
 
