--- a/css/main.css
+++ b/css/main.css
@@ -259,7 +259,7 @@ main hr {
 
 .page {
     position: relative;
-    max-width: 1300px;
+
     margin-left: 90px;
     margin-top: 33px;
     padding: 0 0px 40px;
@@ -318,12 +318,15 @@ main hr {
     box-sizing: border-box;
     -moz-box-sizing: border-box;
     opacity: 0;
-    transition: all 0.5s;
+    transition: all 0.5;
     -o-transition: all 0.5s;
     -ms-transition: all 0.5s;
     -moz-transition: all 0.5s;
     -webkit-transition: all 0.5s;
 }
+
+
+
 
 .pcss3t>.tab-content-first:checked~.tab_list .tab-content-first,
 .pcss3t>.tab-content-2:checked~.tab_list .tab-content-2,
@@ -358,15 +361,15 @@ main hr {
 /**/
 /* typography */
 /**/
-.pcss3t .typography {
+/*.pcss3t .typography {
     color: #666;
-}
+}*/
 
-.pcss3t .typography .link {
+/*.pcss3t .typography .link {
     text-decoration: underline;
     color: #1889e6;
     cursor: pointer;
-}
+}*/
 
 /**/
 /* steps */
@@ -375,9 +378,11 @@ main hr {
 /**/
 /* animation effects */
 /**/
-.pcss3t-effect-scale>.tab_list>.typography {
+
+
+/*.pcss3t-effect-scale>.tab_list>.typography {
     -webkit-transform: scale(0.1, 0.1);
-}
+}*/
 
 /*----------------------------------------------------------------------------*/
 /*                                   LAYOUTS                                  */
@@ -470,11 +475,12 @@ main hr {
     opacity: 1;
 }
 
-.pcss3t-theme-1>.tab_list {
+/*.pcss3t-theme-1>.tab_list {
     border-radius: 0px;
     box-shadow: 0 2px rgba(0, 0, 0, 0.2);
 }
 
+*/
 .pcss3t-theme-1>.tab-content-first:checked~.tab_list {
     border-top-left-radius: 0;
 }
@@ -537,13 +543,12 @@ main hr {
     opacity: 1;
 }
 
-.pcss3t-theme-3>.tab_list {
+/*.pcss3t-theme-3>.tab_list {
     border-top: 4px solid #d9d92b;
     border-bottom: 4px solid #d9d92b;
     border-radius: 0;
     box-shadow: none;
-}
-
+}*/
 /*----------------------------------------------------------------------------*/
 /*                               CUSTOMIZATION                                */
 /*----------------------------------------------------------------------------*/
@@ -552,7 +557,7 @@ main hr {
 /* height */
 /**/
 .pcss3t>.tab_list,
-.pcss3t>.tab_list>.typography {
+.pcss3t>.tab_list {
     height: 600px;
 }
 
@@ -567,20 +572,10 @@ label span {
     color: #213252;
 }
 
-/* 
-label span::before {
-  content: " ";
-  background: url(../images/metal_wrap.svg);
-  background-size: contain;
-  background-repeat: no-repeat;
-  height: 20px;
-  width: 20px;
-  background-position-y: 10px;
-  display: inline-block;
-} */
+
 
 .tab_img {
-    width: 20px;
+    width: 25px;
     position: relative;
     top: 4px;
     right: 5px;
@@ -588,4 +583,52 @@ label span::before {
 
 .product_body {
     display: flex;
+}
+
+
+.border-enclosure {
+    transform: rotate(180deg);
+    height: 600px;
+    border: 1px solid #AEB6BB;
+}
+
+
+.product_body .content {
+    display: block;
+}
+
+.product_body .content h2 {
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 18px;
+    line-height: 36px;
+    /* identical to box height, or 200% */
+    color: #213252;
+}
+
+.content {
+    margin-top: 108px;
+    margin-left: 80px;
+}
+
+.product_body .content ul {
+    list-style-type: disc;
+    margin-top: 18px;
+    margin-left: 23px;
+}
+
+.content ul li {
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 28px;
+    /* or 175% */
+    color: #213252;
+}
+
+
+.content .info-button {
+    margin-top: 224px;
 }
